# accountabot

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  accountabot.py  main.py  package-lock.json  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: python-app.yml
accountabot/: __init__.py  accountabot.py  commands.py  data.py  loop.py  message.py
tests/: conftest.py  test_commands.py  test_loop.py  test_recurrence.py
